<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_name"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_favRestaurant"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourite_restaurant" />
        <item
            android:id="@+id/nav_orderHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq_s" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>
</menu>